// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderItem OrderItems: should render properly - order status : checkout 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#EEEEEE",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "padding": 7.5,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 187.5,
        "justifyContent": "center",
        "width": 187.5,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0)",
          "height": 100,
          "overflow": "hidden",
          "width": 100,
        }
      }
    >
      <Image
        constrainHeight={187.5}
        constrainWidth={187.5}
        onError={[Function]}
        resizeMode="contain"
        shouldPinHeight={false}
        shouldPinWidth={false}
        source={
          Object {
            "uri": "www.fentyxpuma.com/img/1",
          }
        }
        sourceHeight={100}
        sourceWidth={100}
        style={
          Array [
            Object {
              "height": 100,
              "width": 100,
            },
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 15,
        "marginVertical": 15,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0)",
          "color": "rgb(30, 30, 30)",
          "fontSize": 14,
          "fontWeight": "300",
        }
      }
    >
      Fenty x Puma
    </Text>
    <View
      style={
        Array [
          Object {
            "marginTop": 7.5,
          },
          false,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0)",
              "color": "rgb(30, 30, 30)",
              "fontSize": 14,
              "fontWeight": "300",
            },
            Object {
              "color": "#000000",
              "fontWeight": "600",
            },
            false,
          ]
        }
      >
        Incomplete
      </Text>
    </View>
  </View>
</View>
`;

exports[`OrderItem OrderItems: should render properly - order status : completed 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#EEEEEE",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "padding": 7.5,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 187.5,
        "justifyContent": "center",
        "width": 187.5,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0)",
          "height": 100,
          "overflow": "hidden",
          "width": 100,
        }
      }
    >
      <Image
        constrainHeight={187.5}
        constrainWidth={187.5}
        onError={[Function]}
        resizeMode="contain"
        shouldPinHeight={false}
        shouldPinWidth={false}
        source={
          Object {
            "uri": "www.fentyxpuma.com/img/1",
          }
        }
        sourceHeight={100}
        sourceWidth={100}
        style={
          Array [
            Object {
              "height": 100,
              "width": 100,
            },
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 15,
        "marginVertical": 15,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0)",
          "color": "rgb(30, 30, 30)",
          "fontSize": 14,
          "fontWeight": "300",
        }
      }
    >
      Fenty x Puma
    </Text>
    <View
      style={
        Array [
          Object {
            "marginTop": 7.5,
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0)",
              "color": "rgb(30, 30, 30)",
              "fontSize": 14,
              "fontWeight": "300",
            },
            Object {
              "color": "#000000",
              "fontWeight": "600",
            },
            Object {
              "color": "#50E3C2",
            },
          ]
        }
      >
        Shipped out 2 months ago
      </Text>
    </View>
  </View>
</View>
`;

exports[`OrderItem OrderItems: should render properly - order status : payment_success 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#EEEEEE",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "padding": 7.5,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 187.5,
        "justifyContent": "center",
        "width": 187.5,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0)",
          "height": 100,
          "overflow": "hidden",
          "width": 100,
        }
      }
    >
      <Image
        constrainHeight={187.5}
        constrainWidth={187.5}
        onError={[Function]}
        resizeMode="contain"
        shouldPinHeight={false}
        shouldPinWidth={false}
        source={
          Object {
            "uri": "www.fentyxpuma.com/img/1",
          }
        }
        sourceHeight={100}
        sourceWidth={100}
        style={
          Array [
            Object {
              "height": 100,
              "width": 100,
            },
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 15,
        "marginVertical": 15,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0)",
          "color": "rgb(30, 30, 30)",
          "fontSize": 14,
          "fontWeight": "300",
        }
      }
    >
      Fenty x Puma
    </Text>
    <View
      style={
        Array [
          Object {
            "marginTop": 7.5,
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0)",
              "color": "rgb(30, 30, 30)",
              "fontSize": 14,
              "fontWeight": "300",
            },
            Object {
              "color": "#000000",
              "fontWeight": "600",
            },
            Object {
              "color": "#50E3C2",
            },
          ]
        }
      >
        Order processing
      </Text>
    </View>
  </View>
</View>
`;
